--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BåtShop</title>
 </head>
 <body>
-    
+
+    <img src="./img/Loga2.webp" alt="Företagets loga">
+    <header>
+            <h1>BåtShop</h1>
+    </header>
+    <div id="Top right icons">
+    <button type="button"><img src="./img/download.webp" alt="En shopping cart"></button>  
+         
+    </div>
+    <nav>
+        <button type="button">Din profil</button>
+        <button type="button">Om oss</button>
+        <button type="button">Kontakta oss</button>
+        <button type="button">Instälnignar</button>
+        <button type="button">Platser</button>
+        <button type="button">Sälj din båt</button>
+    </nav>
+    <main>
+     <article>
+        <img src="./img/Lyxbåt1.webp" alt="En bild på Lyxbåt1">
+     </article>   
+     <article>
+        <img src="./img/Lyxbåt2.webp" alt="En Bild på Lyxbåt2">
+     </article>  
+     <article>
+        <img src="./img/Lyxbåt3.webp" alt="En Bild på Lyxbåt3">    
+     </article>  
+     <article>
+        <img src="./img/Lyxbåt4.webp" alt="En Bild på Lyxbåt4">
+     </article>  
+     <article>
+        <img src="./img/Lyxbåt5.webp" alt="En Bild på Lyxbåt5">
+     </article>  
+     <article>
+        <img src="./img/Lyxbåt6.webp" alt="En Bild på Lyxbåt6">
+     </article>  
+    </main>
+    <div id="Reklam">
+        <img src="./img/SlavaUkraina.webp" alt="En reklam poster för ukraina">
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
