--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>BåtShop</title>
 </head>
 <body>
@@ -13,6 +14,7 @@
     </header>
     <div id="Top right icons">
     <button type="button"><img src="./img/download.webp" alt="En shopping cart"></button>  
+    <img src="./img/Namnlös.webp" alt="Din profild bild">
          
     </div>
     <nav>
@@ -25,26 +27,26 @@
     </nav>
     <main>
      <article>
-        <img src="./img/Lyxbåt1.webp" alt="En bild på Lyxbåt1">
+      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt1.webp" alt="En bild på Lyxbåt1" width="200" height="200"></Button> 
      </article>   
      <article>
-        <img src="./img/Lyxbåt2.webp" alt="En Bild på Lyxbåt2">
+      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt2.webp" alt="En bild på Lyxbåt2" width="200" height="200"></Button> 
      </article>  
      <article>
-        <img src="./img/Lyxbåt3.webp" alt="En Bild på Lyxbåt3">    
+      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt3.webp" alt="En bild på Lyxbåt3" width="200" height="200"></Button>   
      </article>  
      <article>
-        <img src="./img/Lyxbåt4.webp" alt="En Bild på Lyxbåt4">
+      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt4.webp" alt="En bild på Lyxbåt4" width="200" height="200"></Button> 
      </article>  
      <article>
-        <img src="./img/Lyxbåt5.webp" alt="En Bild på Lyxbåt5">
+      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt5.webp" alt="En bild på Lyxbåt5" width="200" height="200"></Button> 
      </article>  
      <article>
-        <img src="./img/Lyxbåt6.webp" alt="En Bild på Lyxbåt6">
+      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt6.webp" alt="En bild på Lyxbåt6" width="200" height="200"></Button> 
      </article>  
     </main>
     <div id="Reklam">
-        <img src="./img/SlavaUkraina.webp" alt="En reklam poster för ukraina">
+        <img src="./img/SlavaUkraina.webp" alt="En reklam poster för ukraina" width="500" height="900">
     </div>
     <script src="script.js"></script>
 </body>
