save before disaster

--- a/index.html
+++ b/index.html
@@ -1,53 +1,113 @@
 <!DOCTYPE html>
 <html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>BåtShop</title>
-</head>
-<body>
-
-    <img src="./img/Loga2.webp" alt="Företagets loga">
+  </head>
+  <body>
+    <img
+      src="./img/Loga2.webp"
+      alt="Företagets loga"
+      id="FöretagetsLåga"
+    />
     <header>
-            <h1>BåtShop</h1>
+      <h1>BåtShop</h1>
     </header>
-    <div id="Top right icons">
-    <button type="button"><img src="./img/download.webp" alt="En shopping cart"></button>  
-    <img src="./img/Namnlös.webp" alt="Din profild bild">
-         
+    <div id="Toprighticons">
+      <button type="button" id="Shopingcart">
+        <img
+          src="./img/download.webp"
+          alt="En shopping cart"
+          id="ShopingcartBild"
+        />
+      </button>
+      <img
+        src="./img/spelari_ngen.webp"
+        alt="Din profild bild"
+        width="50px"
+        height="50px"
+        id="ProfildBild"
+      />
     </div>
     <nav>
-        <button type="button">Din profil</button>
-        <button type="button">Om oss</button>
-        <button type="button">Kontakta oss</button>
-        <button type="button">Instälnignar</button>
-        <button type="button">Platser</button>
-        <button type="button">Sälj din båt</button>
+      <button type="button" id="Sidknappar">Din profil</button>
+      <button type="button" id="Sidknappar">Om oss</button>
+      <button type="button" id="Sidknappar">Kontakta oss</button>
+      <button type="button" id="Sidknappar">Instälnignar</button>
+      <button type="button" id="Sidknappar">Platser</button>
+      <button type="button" id="Sidknappar">Sälj din båt</button>
     </nav>
-    <main>
-     <article>
-      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt1.webp" alt="En bild på Lyxbåt1" width="200" height="200"></Button> 
-     </article>   
-     <article>
-      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt2.webp" alt="En bild på Lyxbåt2" width="200" height="200"></Button> 
-     </article>  
-     <article>
-      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt3.webp" alt="En bild på Lyxbåt3" width="200" height="200"></Button>   
-     </article>  
-     <article>
-      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt4.webp" alt="En bild på Lyxbåt4" width="200" height="200"></Button> 
-     </article>  
-     <article>
-      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt5.webp" alt="En bild på Lyxbåt5" width="200" height="200"></Button> 
-     </article>  
-     <article>
-      <Button type="button" id="BåtBild"><img src="./img/Lyxbåt6.webp" alt="En bild på Lyxbåt6" width="200" height="200"></Button> 
-     </article>  
-    </main>
-    <div id="Reklam">
-        <img src="./img/SlavaUkraina.webp" alt="En reklam poster för ukraina" width="500" height="900">
-    </div>
+      <main>
+        <article>
+          <button type="button" id="BåtBild">
+            <img
+              src="./img/Lyxbåt1.webp"
+              alt="En bild på Lyxbåt1"
+              width="200"
+              height="200"
+            />
+          </button>
+        </article>
+        <article>
+          <button type="button" id="BåtBild">
+            <img
+              src="./img/Lyxbåt2.webp"
+              alt="En bild på Lyxbåt2"
+              width="200"
+              height="200"
+            />
+          </button>
+        </article>
+        <article>
+          <button type="button" id="BåtBild">
+            <img
+              src="./img/Lyxbåt3.webp"
+              alt="En bild på Lyxbåt3"
+              width="200"
+              height="200"
+            />
+          </button>
+        </article>
+        <article>
+          <button type="button" id="BåtBild">
+            <img
+              src="./img/Lyxbåt4.webp"
+              alt="En bild på Lyxbåt4"
+              width="200"
+              height="200"
+            />
+          </button>
+        </article>
+        <article>
+          <button type="button" id="BåtBild">
+            <img
+              src="./img/Lyxbåt5.webp"
+              alt="En bild på Lyxbåt5"
+              width="200"
+              height="200"
+            />
+          </button>
+        </article>
+        <article>
+          <button type="button" id="BåtBild">
+            <img
+              src="./img/Lyxbåt6.webp"
+              alt="En bild på Lyxbåt6"
+              width="200"
+              height="200"
+            />
+          </button>
+        </article>
+      </main>
+      <div id="Reklam">
+        <img
+          src="./img/SlavaUkraina.webp"
+          alt="En reklam poster för ukraina"
+          id="ReklamBild"
+        />
+      </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
