--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>BåtShop</title>
   </head>
   <body>
+    <div id="Top">
     <img
       src="./img/Loga2.webp"
       alt="Företagets loga"
@@ -31,6 +32,7 @@
         id="ProfildBild"
       />
     </div>
+  </div>
     <nav>
       <button type="button" id="Sidknappar">Din profil</button>
       <button type="button" id="Sidknappar">Om oss</button>
