--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="VarukorgStyle.css" />
     <title>BåtShop</title>
   </head>
   <body>
@@ -19,10 +20,51 @@
             alt="En shopping cart"
             id="ShopingcartBild"
           />
-          <div id="Varukorg">
-            <article id="BåtDrop">
-
-            </article>
+          <div id="Varukorg1">
+            <div id="Varukorg2">
+              <article id="BåtDrop">
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt1')">
+                  Remove
+                </button>
+                <img src="./img/Lyxbåt1.webp" alt="Bild på Båt 1" />
+                <p>Pris: 100000 kr</p>
+              </article>
+              <article id="BåtDrop">
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt2')">
+                  Remove
+                </button>
+                <img src="./img/Lyxbåt2.webp" alt="Bild på Båt 2" />
+                <p>Pris:150000 kr</p>
+              </article>
+              <article id="BåtDrop">
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt3')">
+                  Remove
+                </button>
+                <img src="./img/Lyxbåt3.webp" alt="Bild på Båt 3" />
+                <p>Pris:169000 kr</p>
+              </article>
+              <article id="BåtDrop">
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt4')">
+                  Remove
+                </button>
+                <img src="./img/Lyxbåt4.webp" alt="Bild på Båt 4" />
+                <p>Pris:1.200000 kr</p>
+              </article>
+              <article id="BåtDrop">
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt5')">
+                  Remove
+                </button>
+                <img src="./img/Lyxbåt5.webp" alt="Bild på Båt 5" />
+                <p>Pris:300000 kr</p>
+              </article>
+              <article id="BåtDrop">
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt6')">
+                  Remove
+                </button>
+                <img src="./img/Lyxbåt6.webp" alt="Bild på Båt 6" />
+                <p>Pris:1.50000000 kr</p>
+              </article>
+            </div>
           </div>
         </button>
         <img
