Håller på med varukorg

--- a/index.html
+++ b/index.html
@@ -14,58 +14,58 @@
         <h1>BåtShop</h1>
       </header>
       <div id="Toprighticons">
+        <div id="Varukorg1">
+          <div id="Varukorg2">
+            <article id="BåtDrop">
+              <img src="./img/Lyxbåt1.webp" alt="Bild på Båt 1"  id="DropDownBild"/>
+              <p id="Pris">Pris: 100000 kr</p>
+              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt1')">
+                Remove
+              </button>
+            </article>
+            <article id="BåtDrop">
+              <img src="./img/Lyxbåt2.webp" alt="Bild på Båt 2"   id="DropDownBild"/>
+              <p id="Pris">Pris:150000 kr</p>
+              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt2')">
+                Remove
+              </button>
+            </article>
+            <article id="BåtDrop">
+              <img src="./img/Lyxbåt3.webp" alt="Bild på Båt 3"  id="DropDownBild" />
+              <p id="Pris">Pris:169000 kr</p>
+              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt3')">
+                Remove
+              </button>
+            </article>
+            <article id="BåtDrop">
+              <img src="./img/Lyxbåt4.webp" alt="Bild på Båt 4"  id="DropDownBild" />
+              <p id="Pris">Pris:1.200000 kr</p>
+              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt4')">
+                Remove
+              </button>
+            </article>
+            <article id="BåtDrop">
+              <img src="./img/Lyxbåt5.webp" alt="Bild på Båt 5"  id="DropDownBild" />
+              <p id="Pris">Pris:300000 kr</p>
+              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt5')">
+                Remove
+              </button>
+            </article>
+            <article id="BåtDrop">
+              <img src="./img/Lyxbåt6.webp" alt="Bild på Båt 6"  id="DropDownBild"/>
+              <p id="Pris">Pris:1.50000000 kr</p>
+              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt6')">
+                Remove
+              </button>
+            </article>
+          </div>
+        </div>
         <button type="button" id="Shopingcart">
           <img
             src="./img/download.webp"
             alt="En shopping cart"
             id="ShopingcartBild"
           />
-          <div id="Varukorg1">
-            <div id="Varukorg2">
-              <article id="BåtDrop">
-                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt1')">
-                  Remove
-                </button>
-                <img src="./img/Lyxbåt1.webp" alt="Bild på Båt 1" />
-                <p>Pris: 100000 kr</p>
-              </article>
-              <article id="BåtDrop">
-                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt2')">
-                  Remove
-                </button>
-                <img src="./img/Lyxbåt2.webp" alt="Bild på Båt 2" />
-                <p>Pris:150000 kr</p>
-              </article>
-              <article id="BåtDrop">
-                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt3')">
-                  Remove
-                </button>
-                <img src="./img/Lyxbåt3.webp" alt="Bild på Båt 3" />
-                <p>Pris:169000 kr</p>
-              </article>
-              <article id="BåtDrop">
-                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt4')">
-                  Remove
-                </button>
-                <img src="./img/Lyxbåt4.webp" alt="Bild på Båt 4" />
-                <p>Pris:1.200000 kr</p>
-              </article>
-              <article id="BåtDrop">
-                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt5')">
-                  Remove
-                </button>
-                <img src="./img/Lyxbåt5.webp" alt="Bild på Båt 5" />
-                <p>Pris:300000 kr</p>
-              </article>
-              <article id="BåtDrop">
-                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt6')">
-                  Remove
-                </button>
-                <img src="./img/Lyxbåt6.webp" alt="Bild på Båt 6" />
-                <p>Pris:1.50000000 kr</p>
-              </article>
-            </div>
-          </div>
         </button>
         <img
           src="./img/spelari_ngen.webp"
