--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="VarukorgStyle.css" />
+    <link rel="stylesheet" href="./VarukorgStyle.css" />
     <title>BåtShop</title>
   </head>
   <body>
@@ -14,59 +14,88 @@
         <h1>BåtShop</h1>
       </header>
       <div id="Toprighticons">
-        <div id="Varukorg1">
-          <div id="Varukorg2">
-            <article id="BåtDrop">
-              <img src="./img/Lyxbåt1.webp" alt="Bild på Båt 1"  id="DropDownBild"/>
-              <p id="Pris">Pris: 100000 kr</p>
-              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt1')">
-                Remove
-              </button>
-            </article>
-            <article id="BåtDrop">
-              <img src="./img/Lyxbåt2.webp" alt="Bild på Båt 2"   id="DropDownBild"/>
-              <p id="Pris">Pris:150000 kr</p>
-              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt2')">
-                Remove
-              </button>
-            </article>
-            <article id="BåtDrop">
-              <img src="./img/Lyxbåt3.webp" alt="Bild på Båt 3"  id="DropDownBild" />
-              <p id="Pris">Pris:169000 kr</p>
-              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt3')">
-                Remove
-              </button>
-            </article>
-            <article id="BåtDrop">
-              <img src="./img/Lyxbåt4.webp" alt="Bild på Båt 4"  id="DropDownBild" />
-              <p id="Pris">Pris:1.200000 kr</p>
-              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt4')">
-                Remove
-              </button>
-            </article>
-            <article id="BåtDrop">
-              <img src="./img/Lyxbåt5.webp" alt="Bild på Båt 5"  id="DropDownBild" />
-              <p id="Pris">Pris:300000 kr</p>
-              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt5')">
-                Remove
-              </button>
-            </article>
-            <article id="BåtDrop">
-              <img src="./img/Lyxbåt6.webp" alt="Bild på Båt 6"  id="DropDownBild"/>
-              <p id="Pris">Pris:1.50000000 kr</p>
-              <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt6')">
-                Remove
-              </button>
-            </article>
+        <div id="DropDownMeny">
+          <div id="Shopingcart">
+            <a onclick="">
+              <img
+                src="./img/download.webp"
+                alt="En shopping cart"
+                id="ShopingcartBild"
+              />
+            </a>
+          </div>
+          <div id="Varukorg1">
+            <div id="Varukorg2">
+              <article id="BåtDrop1">
+                <img
+                  src="./img/Lyxbåt1.webp"
+                  alt="Bild på Båt 1"
+                  id="DropDownBild"
+                />
+                <p id="Pris">Pris: 100000 kr</p>
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt1')">
+                  Remove
+                </button>
+              </article>
+              <article id="BåtDrop2">
+                <img
+                  src="./img/Lyxbåt2.webp"
+                  alt="Bild på Båt 2"
+                  id="DropDownBild"
+                />
+                <p id="Pris">Pris:150000 kr</p>
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt2')">
+                  Remove
+                </button>
+              </article>
+              <article id="BåtDrop3">
+                <img
+                  src="./img/Lyxbåt3.webp"
+                  alt="Bild på Båt 3"
+                  id="DropDownBild"
+                />
+                <p id="Pris">Pris:169000 kr</p>
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt3')">
+                  Remove
+                </button>
+              </article>
+              <article id="BåtDrop4">
+                <img
+                  src="./img/Lyxbåt4.webp"
+                  alt="Bild på Båt 4"
+                  id="DropDownBild"
+                />
+                <p id="Pris">Pris:1.200000 kr</p>
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt4')">
+                  Remove
+                </button>
+              </article>
+              <article id="BåtDrop5">
+                <img
+                  src="./img/Lyxbåt5.webp"
+                  alt="Bild på Båt 5"
+                  id="DropDownBild"
+                />
+                <p id="Pris">Pris:300000 kr</p>
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt5')">
+                  Remove
+                </button>
+              </article>
+              <article id="BåtDrop6">
+                <img
+                  src="./img/Lyxbåt6.webp"
+                  alt="Bild på Båt 6"
+                  id="DropDownBild"
+                />
+                <p id="Pris">Pris:1.50000000 kr</p>
+                <button id="TabortFrånKorg" onclick="TabortFrånKorg('Båt6')">
+                  Remove
+                </button>
+              </article>
+            </div>
           </div>
         </div>
-        <button type="button" id="Shopingcart">
-          <img
-            src="./img/download.webp"
-            alt="En shopping cart"
-            id="ShopingcartBild"
-          />
-        </button>
+
         <img
           src="./img/spelari_ngen.webp"
           alt="Din profilbild"
