--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </article>
               <article id="BåtDrop5">
                 <img
-                  src="./img/Lyxbåt5.webp"
+                  src="./img/LyxBåt5.webp"
                   alt="Bild på Båt 5"
                   id="DropDownBild"
                 />
@@ -162,7 +162,7 @@
         <article>
           <button type="button" id="BåtBild" onclick="addtocart('Båt5')">
             <img
-              src="./img/Lyxbåt5.webp"
+              src="./img/LyxBåt5.webp"
               alt="En bild på Lyxbåt5"
               width="200"
               height="200"
